# bevy_wireframe

./: Cargo.toml  bevy_wireframe.d.ts  bevy_wireframe.js  bevy_wireframe_bg.wasm.d.ts  build_wasm.sh  index copy.html  index.html  styles copy.css  styles.css
.github/workflows/: deploy.yml
assets/: car1.gltf  coupe.glb  sphere.gltf  sphere_flat.gltf  torus.gltf  toyota2.gltf
assets/astro/: astro.gltf  license.txt
assets/astro_custom/: scene.gltf  scene.json
assets/gltf/: astro.gltf  coupe.gltf  sphere.gltf  test.gltf  torus.gltf
assets/shaders/: _black_material.wgsl  _flat_color.wgsl  _get_cam_pos.wgsl  _normal_vis.wgsl  _outline_shader_frontface_cull.wgsl  _simple_normal_shading.wgsl  _solid_line_shader.wgsl  _solid_shader.wgsl  _vertex_offset.wgsl  fill.wgsl  line.wgsl  outline.wgsl
assets/temp/: astro.glb  astro.gltf  coupe.gltf  coupe2.gltf  cube.gltf  discovery.gltf  sphere_no_extras.gltf  torus.gltf  torus_custom_property.gltf
blender/: astro.blend  coupe.blend  coupe.blend1  coupe.glb  cube.blend  torus.blend  torus.blend1  torus.glb
src/: camera_plugin.rs  fill_material.rs  line_material.rs  load_json.rs  main copy.rs  main.rs  main_copy.rs  mesh_ops.rs  outline_material.rs  parse_extras.rs  scratch.rs  window_resize_plugin.rs
src/blender/: assign_indices.py  assign_unique_indices.py  create_json_line_list.py  renove_attributes.py
src/blender_scripts/: assign_unique_indices.py  renove_attributes.py
web/: index.html
web/assets/: sphere_flat.gltf
web/assets/astro/: scene.gltf
web/assets/shaders/: fill.wgsl  generate_line.wgsl  line.wgsl
