[package]
name = "bevy_vaporwave"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0.66"
bevy_panorbit_camera = { version = "0.19", features = ["bevy_egui"] }
wasm-bindgen = "0.2.93"
# bevy_egui = "0.29.0"  # Use the version compatible with your Bevy version
bevy_egui = { version = "0.28", default-features = false, features = [
    "render",
    "default_fonts",
] }

[profile.release]
# opt-level = 'z'

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
